Make changes based on PR feedback