@@ -15,23 +15,13 @@
     <maven.compiler.target>22</maven.compiler.target>
     <maven.compiler.source>22</maven.compiler.source>
     <maven.compiler.enablePreview>true</maven.compiler.enablePreview>
+    <argLine>--enable-preview</argLine> <!-- For Surefire -->
 
     <slf4j.version>1.7.36</slf4j.version>
     <junit.version>5.10.1</junit.version>
   </properties>
 
   <dependencies>
-    <dependency>
-      <groupId>org.slf4j</groupId>
-      <artifactId>slf4j-api</artifactId>
-      <version>${slf4j.version}</version>
-    </dependency>
-    <dependency>
-      <groupId>org.slf4j</groupId>
-      <artifactId>slf4j-simple</artifactId>
-      <version>${slf4j.version}</version>
-    </dependency>
-
     <dependency>
       <groupId>org.junit.jupiter</groupId>
       <artifactId>junit-jupiter</artifactId>
